force-app/main/default/objects/Combination_Unit_Field__mdt/Combination_Unit_Field__mdt.object-meta.xml
<CustomObject>
    <description>Units lookup for Case and related objects</description>
    <label>Combination Unit Field</label>
    <pluralLabel>Combination Unit Fields</pluralLabel>
</CustomObject>