force-app/main/default/objects/Combination_Unit_Field__mdt/fields/Unit_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Field_Name__c</fullName>
    <description>API name of the field where the unit is saved in the record</description>
    <inlineHelpText>API name of the field where the unit is saved in the record</inlineHelpText>
    <label>Unit Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>