force-app/main/default/objects/Combination_Unit_Field__mdt/fields/Unit_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Object_Name__c</fullName>
    <description>API name of the object to be shown as the unit field related to the value field</description>
    <inlineHelpText>API name of the object to be shown as the unit field related to the value field</inlineHelpText>
    <label>Unit Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>