force-app/main/default/objects/Combination_Unit_Field__mdt/fields/Value_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Value_Field_Name__c</fullName>
    <description>API name of the field where user enters a value</description>
    <inlineHelpText>API name of the field where user enters a value</inlineHelpText>
    <label>Value Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>